Starting CV project structure

--- a/admin/package.json
+++ b/admin/package.json
@@ -19,7 +19,7 @@
     "metronic"
   ],
   "author": "Josh Industries. <sjosuerojasc@gmail.com> (https://github.com/sjosuerojas)",
-  "license": "ISC",
+  "license": "MIT",
   "contributors": [
     "Josue Rojas <sjosuerojasc@gmail.com> (https://github.com/sjosuerojas)"
   ],
