--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "hooks"
   ],
   "author": "Josh Industries. <sjosuerojasc@gmail.com> (https://github.com/sjosuerojas)",
-  "license": "ISC",
+  "license": "MIT",
   "contributors": [
     "Josue Rojas <sjosuerojasc@gmail.com> (https://github.com/sjosuerojas)"
   ],
