--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,7 @@
     "express"
   ],
   "author": "Josh Industries. <sjosuerojasc@gmail.com> (https://github.com/sjosuerojas)",
-  "license": "ISC",
+  "license": "MIT",
   "contributors": [
     "Josue Rojas <sjosuerojasc@gmail.com> (https://github.com/sjosuerojas)"
   ],
