--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/image": "^0.15.1",
+		"@astrojs/partytown": "^1.1.1",
 		"@astrojs/sitemap": "^1.1.0",
 		"@contentful/rich-text-html-renderer": "^16.0.2",
 		"astro": "^2.0.15",
